# libCacheMoney

./: .gitignore  CMakeLists.txt  README.md
include/: cache.hpp  elem.hpp  eviction_set_builder.hpp  intrinsics.hpp  l1.hpp  l3.hpp  linked_list.hpp  meta_cache.hpp  prime_patterns.hpp  string_literal.hpp  utils.hpp  virt_to_phys.hpp
include/attacks/: flush_reload.hpp  prime_probe.hpp
include/evsets/: eviction_set_l3.hpp  eviction_sets.hpp  ps_evset.hpp
matlab/: plot_cache_timings.m
src/common/: cache.cpp  eviction_set_builder.cpp  eviction_set_l3.cpp  flush_reload.cpp  l1.cpp  l3.cpp  prime_probe.cpp  ps_evset.cpp  utils.cpp
src/linux/: intrinsics.cpp  utils.cpp
src/windows/: intrinsics.cpp  utils.cpp
tests/: CMakeLists.txt  test_address_mapping.cpp  test_baselines.cpp  test_cache_sizes.cpp  test_cache_timings.cpp  test_eviction_set_builder.cpp  test_flush_reload_basic.cpp  test_flush_reload_external.cpp  test_l3_evset.cpp  test_meme.cpp  test_meta_cache.cpp  test_prime_parer.cpp  test_prime_probe.cpp  test_prime_probe_old.cpp  test_ps_evset.cpp  test_utils.cpp  test_virt_to_phys.cpp
victims/: CMakeLists.txt  victim_prime_probe.cpp  weak_alg.cpp
victims/include/: victim_prime_probe.hpp  weak_alg.hpp
