cmake_minimum_required(VERSION 3.20)
project(tests)

set(CMAKE_C_STANDARD 23)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
include(CTest)

function(create_test TEST_NAME)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    target_link_libraries(${TEST_NAME} libCacheMoney)
    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_HOME_DIRECTORY}/include)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
    message(STATUS "Creating Test ${TEST_NAME}")
endfunction()

file(GLOB TEST_FILES "test_*.cpp")
foreach(FILE_PATH ${TEST_FILES})
    cmake_path(GET FILE_PATH STEM LAST_ONLY TEST)
    create_test(${TEST})
endforeach()
